--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           hugo-version: 'latest'
           extended: true
+      - run: hugo -v
 
       - name: Setup Node
         uses: actions/setup-node@v2
