--- a/.gitignore
+++ b/.gitignore
@@ -1045,3 +1045,7 @@ Thumbs.db
 # End of https://www.gitignore.io/api/xcodeinjection,xcode,webstorm+all,vuejs,visualstudiocode,vertx,terraform,swift,sonarqube,scala,react,r,pycharm+all,puppet,objective-c,node,maven,macos,kotlin,jmeter,java,intellij+all,gradle,go,eclipse,androidstudio,android,pydev,python
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+
+public
+node_modules
+resources
