--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,18 +21,18 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
+      - name: Cache dependencies
+        uses: actions/cache@v1
         with:
-          node-version: '16'
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      # - name: Cache dependencies
-      #   uses: actions/cache@v1
+      # - name: Setup Node
+      #   uses: actions/setup-node@v2
       #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-node-
+      #     node-version: '16'
 
       - name: Install
         run: npm install
