--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,6 +21,11 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
       - name: Cache dependencies
         uses: actions/cache@v1
         with:
@@ -29,15 +34,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      # - name: Setup Node
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: '16'
+
 
       - name: Install
         run: npm install
 
-      - run: npm list -all
+      # - run: npm list -all
 
       - run: ls -l themes/docsy/assets/vendor
 
