--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -42,7 +42,8 @@ jobs:
       # - run: npm list -all
 
       - run: ls -l themes/docsy/assets/vendor
-      - run: ls -l themes/docsy/assets/vendor/bootstrap/scss
+      - run: tree
+      #- run: ls -l themes/docsy/assets/vendor/bootstrap/scss
 
       - run: hugo -v
 
